# canvas-sync-cli

./: Cargo.toml  Makefile  README.md  bin  canvas.json
.experiments/cpp/: CMakeLists.txt  Makefile  canvas-sync  canvas_api.cc  canvas_api.cpp  canvas_api.h  compile_commands.json  errors.cpp  errors.h  filetree.cc  filetree.h  filetree_test.cc  httpclient.h  main.cc  main.cpp  main.h.in  rust.h  types.cc  types.cpp  types.h
.experiments/cpp/embed/: Cargo.toml
.experiments/cpp/scripts/: debug
src/: api.rs  app.rs  config.rs  error.rs  experiment.rs  folder_map.rs  main.rs  old-config.rs  string.rs  sync.rs  traits.rs  types.rs
test/: package.json  tsconfig.json
test/CS1010S/: course admin.txt
test/CS1010S/Lecture Notes/: L1.txt  L2.txt  L3.txt
test/CS1010S/Tutorials/: T1.txt  T2.txt  T3.txt
test/src/: bin.ts  index.ts  integration.test.ts  types.ts
web/: package.json
web/pages/: index.tsx
web/pages/api/canvas/: any.ts  profile.ts
