[package]
name = "canvas-sync"
version = "0.4.2"
edition = "2021"
authors = ["Nguyen Vu Khang <brew4k@gmail.com>"]
description = """
A barebones CLI tool that keeps local folders up-to-date with online folders on Canvas.
"""
homepage = "https://github.com/nguyenvukhang/canvas-sync"
repository = "https://github.com/nguyenvukhang/canvas-sync"
documentation = "https://github.com/nguyenvukhang/canvas-sync"
keywords = ["sync"]
categories = ["command-line-utilities"]
license = "MIT"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
urlencoding = "2.1.2"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
confy = { "version" = "0.5.1", features = ["yaml_conf"], default-features = false }
futures = "0.3.25"
